# YABIL

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Doxyfile  LICENSE.txt  README.md  build.py  conanfile.py
.github/workflows/: benchmarks.yml  code_analysis.yml  conan_packages.yml  documentation_deploy.yml  linux_android_test.yml  linux_gcc_test.yml  macos_clang_test.yml  windows_mcvc_test.yml
benchmark/: .gitignore  CMakeLists.txt  conanfile.txt  run.py  show.py
benchmark/cases/: no_optimizations.txt  normal.txt  normal_tbb.txt  uint16.txt  uint32.txt  uint8.txt
benchmark/src/: addition.cpp  benchmark_utils.cpp  benchmark_utils.h  division.cpp  multiplication.cpp  subtraction.cpp  utils.cpp  utils.h
benchmark/visualization/: visualize.ipynb  visualize.py
cmake/: algorithms_config.h.in  common.cmake  config.cmake.in  setup.cmake  yabilConfig.cmake
conan/: conanfile.txt
conan/profiles/: android  clang  gcc  vs  vs2022
conan/recipe/: conanfile.py
conan/recipe/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
docker/cpp_analysis_tools/: dockerfile
docker/cpp_android_tools/: dockerfile
docs/: Doxyfile  architecture.dox  mainpage.dox
libs/: CMakeLists.txt
libs/big_int/: CMakeLists.txt
libs/bigint/: CMakeLists.txt
libs/bigint/benchmark/: Addition.cpp  BenchmarkUtils.cpp  BenchmarkUtils.h
libs/bigint/include/yabil/bigint/: BigInt.h  BigIntBase.h  BigIntContext.h  BigIntGlobalConfig.h  Parallel.h  Thresholds.h  TypeUtils.h  test.h
libs/bigint/src/: AVX2Utils.cpp  AVX2Utils.h  Arithmetic.cpp  Arithmetic.h  BigInt.cpp  BigIntArithmeticOperators.cpp  BigIntBinaryOperators.cpp  BigIntContext.cpp  BigIntGlobalConfig.cpp  BigIntOperators.cpp  BigIntParallelOperations.cpp  BigIntReleationOperators.cpp  Parallel.cpp  SafeOperators.h  StringConversionUtils.cpp  StringConversionUtils.h  Thresholds.h  TypeUtils.h  test.cpp
libs/bigint/src/add_sub/: AddSub.cpp  AddSub.h  AddSubAVX2Impl.cpp  AddSubAVX512DQImpl.cpp  AddSubCUDAImpl.cu  AddSubCppImpl.cpp
libs/bigint/src/add_sub/asm/: AddSubAsm.cpp  AddSubAsm.h
libs/bigint/src/add_sub/asm/x86_64/system_v/: AddImpl.asm  SubImpl.asm
libs/bigint/src/parallel/: Parallel.cpp  ParallelImpl.h  ParallelStdImpl.cpp  ParallelTBBImpl.cpp
libs/bigint/test/: BigIntAddOperator_tests.cpp  BigIntAndOperator_tests.cpp  BigIntBitOperations_tests.cpp  BigIntComparaison_tests.cpp  BigIntConstructor_tests.cpp  BigIntConversion_tests.cpp  BigIntDivOperator_tests.cpp  BigIntGlobalConfig_tests.cpp  BigIntGreaterComparaison_tests.cpp  BigIntIncrementDecrementOperator_tests.cpp  BigIntIsPowerOf2_tests.cpp  BigIntLowerComparaison_tests.cpp  BigIntMulOperator_tests.cpp  BigIntNotOperator_tests.cpp  BigIntOperator_tests.cpp  BigIntOrOperator_tests.cpp  BigIntParallelOperations_tests.cpp  BigIntPowOperator_tests.cpp  BigIntShiftOperator_tests.cpp  BigIntStreamOperator_tests.cpp  BigIntSubOperator_tests.cpp  BigIntXorOperator_tests.cpp  ParallelOperations_tests.cpp  empty.cpp
libs/compile_time/: CMakeLists.txt
libs/compile_time/include/yabil/compile_time/: BigIntData.h  Concepts.h  ConstBigInt.h  ConstBigUInt.h  Literals.h  Math.h
libs/compile_time/include/yabil/compile_time/detail/: BigIntData.h  ConstBigInt.h  MakeConstBigInt.h
libs/compile_time/include/yabil/compile_time/detail/operators/: ArithmeticOperators.h  BitwiseOperators.h  RelationOperators.h
libs/compile_time/include/yabil/compile_time/impl/: ArithmeticOperators.h  ArithmeticOperatorsImpl.h  BitwiseOperators.h  BitwiseOperatorsImpl.h  ConstBigIntImpl.h  DivisionImpl.h  MakeConstBigInt.h  MathImpl.h  RelationOperators.h  RelationOperatorsImpl.h  StringConversion.h  Utils.h
libs/compile_time/include/yabil/compile_time/impl/operators/: ArithmeticOperatorsImpl.h  BitwiseOperatorsImpl.h  DivisionImpl.h  RelationOperatorsImpl.h
libs/compile_time/include/yabil/compile_time/operators/: ArithmeticOperators.h  BitwiseOperators.h  RelationOperators.h
libs/compile_time/test/: Addition_tests.cpp  Comparison_tests.cpp  ConstBigUInt_tests.cpp  Constructor_tests.cpp  Conversion_tests.cpp  Division_tests.cpp  Literals_tests.cpp  Math_tests.cpp  Multiplication_tests.cpp  RelationOperators_tests.cpp  ShiftOperators_tests.cpp  Subtraction_tests.cpp
libs/crypto/: CMakeLists.txt
libs/crypto/include/yabil/crypto/: RSA.h  Random.h  Utils.h  crypto.h
libs/crypto/src/: Primes.cpp  Primes.h  RSA.cpp  Random.cpp  Utils.cpp  crypto.cpp
libs/crypto/test/: RSA_tests.cpp  Random_tests.cpp  UtilsFactorial_tests.cpp  UtilsLog_tests.cpp  UtilsRandom_tests.cpp
libs/math/: CMakeLists.txt
libs/math/include/yabil/math/: Math.h
libs/math/src/: Math.cpp
libs/math/test/: MathFactorial_tests.cpp  MathGCD_tests.cpp  MathLog_tests.cpp  MathModInverse_tests.cpp  MathPowOperator_tests.cpp  MathRoot_tests.cpp  MathSqrt_tests.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/yabil/utils/: FunctionWrapper.h  IterUtils.h  MakeSpan.h  ThreadPool.h  ThreadPoolSingleton.h  TypeUtils.h
libs/utils/src/: FunctionWrapper.cpp  ThreadPool.cpp  ThreadPoolSingleton.cpp
libs/utils/test/: FunctionWrapper_tests.cpp  IterUtils_tests.cpp  MakeSpan_tests.cpp  ThreadPoolSingleton_tests.cpp  ThreadPool_tests.cpp
libs/visibility/: CMakeLists.txt
libs/visibility/include/yabil/visibility/: Visibility.h
scripts/: build.py  coverage.py  cppcheck_config.cfg  generate_ct_tests.py  github_tools.py  run_profiling.py
scripts/performance_stats/: CMakeLists.txt  conanfile.py  main.cpp  profile_utils.h  run.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
utils/: num_to_int_array.ipynb
